--- a/test/fixture/validation.html
+++ b/test/fixture/validation.html
@@ -1,3 +1,4 @@
 <form>
-  <input type="text" data-required>
+  <input type="text" data-required data-validate="required" value="foo">
+  <input type="text" data-required data-validate="required">
 </form>
