--- a/test/fixture/modal.html
+++ b/test/fixture/modal.html
@@ -1,4 +1,7 @@
 <body>
-  <div data-modal>foo</div>
+  <div data-modal>
+    foo
+    <div data-moda="close"></div>
+  </div>
   <div class="bar"></div>
 </body>
