--- a/test/fixture/modal.html
+++ b/test/fixture/modal.html
@@ -1,7 +1,7 @@
 <body>
   <div data-modal>
     foo
-    <div data-moda="close"></div>
+    <div data-trigger="close"></div>
   </div>
   <div class="bar"></div>
 </body>
