--- a/test/fixture/modal.html
+++ b/test/fixture/modal.html
@@ -3,5 +3,7 @@
     foo
     <div data-trigger="close"></div>
   </div>
-  <div class="bar"></div>
+  <div class="bar">
+    <button data-trigger="open"></button>
+  </div>
 </body>
