fix(form): added tests specs for select field

--- a/test/fixture/form.html
+++ b/test/fixture/form.html
@@ -1,5 +1,8 @@
 <form>
   <fieldset class="field">
     <input type="text" class="input">
+    <select class="select">
+      <option></option>
+    </select>
   </fieldset>
 </form>
